Completed companion IPython notebooks to accompany each HOD modeling tutorial

--- a/docs/notebooks/hod_modeling/hod_modeling_tutorial1.ipynb
+++ b/docs/notebooks/hod_modeling/hod_modeling_tutorial1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d8b9fa0fd3ce3f32dd2f780ae5151824de885d3be607784361fafdf73c20e261"
+  "signature": "sha256:28dc7239b5cfc350daaaaadd7d711670aa4d9ce15f71cd625c361c4a85a9db5a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook is intended to accompany the corresponding page of the Halotools documentation on HOD-style model building. Although the tutorial on `halotools.readthedocs.org` is in principle comprehensive, there is supplementary material covered here that may provide further clarification. Additionally, by following along with this notebook you can experiment with variations on the models as you learn the basic syntax. \n"
+      "This notebook is intended to accompany the corresponding page of the Halotools documentation on HOD-style model building. Although the tutorial on `halotools.readthedocs.org` is in principle comprehensive and stand-alone, there is supplementary material covered here that may provide further clarification. By following along with this notebook you can experiment with variations on the models as you learn the basic syntax. This notebook is not stand-alone, and is intended to be read along with its companion tutorial in the documentation. \n"
      ]
     },
     {
@@ -110,7 +110,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What's happening the *first* time any composite model instance calls the `populate_mock` method, a halo catalog is loaded into memory, processed into an efficient memory layout, and bound to the model object. This way, when you call the `populate_mock` method multiple times in a row, your successive calls will run *much* faster than the first, which useful for MCMC-type applications. However, when you try and switch simulations for the same model instance, Halotools detects this and requires you to start over. We'll do this now to demonstrate:"
+      "What's happening the *first* time any composite model instance calls the `populate_mock` method, a halo catalog is loaded into memory, processed into an efficient memory layout, and bound to the model object. This way, when you call the `populate_mock` method multiple times in a row, your successive calls will run *much* faster than the first, which useful for MCMC-type applications. However, when you try and switch simulations for the same model instance, Halotools detects this and requires you to start over with a new instance. We'll do this now to demonstrate:"
      ]
     },
     {
