Finished first draft of documentation overhaul to reflect new API of populate_mock

--- a/docs/notebooks/hod_modeling/hod_modeling_tutorial3.ipynb
+++ b/docs/notebooks/hod_modeling/hod_modeling_tutorial3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:642d5e860cb171a35e71b260581832105c77e2f2cec133d5d3ad0c7eb2232856"
+  "signature": "sha256:d125b776bcfab65ad0d24d02d185c7584b3d45d4612beef7e7b39ead7f0c8c81"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -85,7 +85,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "new_model.populate_mock(simname = 'bolshoi')"
+      "from halotools.sim_manager import CachedHaloCatalog\n",
+      "halocat = CachedHaloCatalog(simname = 'bolshoi', redshift = 0)\n",
+      "new_model.populate_mock(halocat)"
      ],
      "language": "python",
      "metadata": {},
@@ -96,14 +98,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As always, the first mock generation is slow, and all subsequent generations are fast:"
+      "As always, the first mock generation is slow, and all subsequent calls to `mock.populate` are fast:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "new_model.populate_mock(simname = 'bolshoi')"
+      "new_model.mock.populate()"
      ],
      "language": "python",
      "metadata": {},
@@ -114,7 +116,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit new_model.populate_mock(simname = 'bolshoi')"
+      "%timeit new_model.mock.populate()"
      ],
      "language": "python",
      "metadata": {},
@@ -123,7 +125,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1 loops, best of 3: 236 ms per loop\n"
+        "1 loops, best of 3: 257 ms per loop\n"
        ]
       }
      ],
@@ -149,7 +151,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['halo_num_centrals', 'halo_num_satellites', 'halo_spin', 'halo_y', 'halo_x', 'halo_z', 'halo_vx', 'halo_vy', 'halo_vz', 'conc_NFWmodel', 'halo_rvir', 'halo_mvir', 'halo_id', 'gal_type', 'galsize', 'vx', 'host_centric_distance', 'vy', 'y', 'x', 'vz', 'z']\n"
+        "['halo_upid', 'halo_num_centrals', 'halo_num_satellites', 'halo_spin', 'halo_y', 'halo_x', 'halo_z', 'halo_vx', 'halo_vy', 'halo_vz', 'conc_NFWmodel', 'halo_rvir', 'halo_mvir', 'halo_id', 'gal_type', 'galsize', 'vx', 'host_centric_distance', 'vy', 'y', 'x', 'vz', 'z']\n"
        ]
       }
      ],
@@ -170,15 +172,15 @@
        "text": [
         "galsize \n",
         "--------\n",
-        "0.016404\n",
-        "0.016064\n",
-        "0.009612\n",
-        "0.004624\n",
-        "0.018632\n"
+        " 0.00886\n",
+        " 0.01926\n",
+        "0.005946\n",
+        "  0.0183\n",
+        "0.003664\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
