--- a/docs/notebooks/subhalo_modeling/subhalo_modeling_tutorial3.ipynb
+++ b/docs/notebooks/subhalo_modeling/subhalo_modeling_tutorial3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:971b04d064267d78501f815700911cb22728bff4c8eae51ea5481216c53e8f9c"
+  "signature": "sha256:09d15e354eb7be4bb92df725e4c7c44b2b2eade1d996becf06baf8b7abf5d906"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -63,7 +63,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -83,36 +83,38 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "new_model.populate_mock(simname = 'bolshoi')"
+      "from halotools.sim_manager import CachedHaloCatalog\n",
+      "halocat = CachedHaloCatalog(simname = 'bolshoi')\n",
+      "new_model.populate_mock(halocat)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As always, the first mock generation is slow, and all subsequent generations are fast:"
+      "As always, the first mock generation is slow, and calls to the `populate` method of the mock is fast:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "new_model.populate_mock(simname = 'bolshoi')"
+      "new_model.mock.populate()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%timeit new_model.populate_mock(simname = 'bolshoi')"
+      "%timeit new_model.mock.populate()"
      ],
      "language": "python",
      "metadata": {},
@@ -121,11 +123,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1 loops, best of 3: 337 ms per loop\n"
+        "1 loops, best of 3: 239 ms per loop\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -151,7 +153,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -168,15 +170,15 @@
        "text": [
         "galsize \n",
         "--------\n",
-        "0.003714\n",
         "0.015664\n",
         "0.005818\n",
         "0.007052\n",
+        "0.003714\n",
         "0.005154\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -191,7 +193,17 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
     }
    ],
    "metadata": {}
