Fixed typos in galaxy_catalog_analysis_tutorial10

--- a/docs/notebooks/galcat_analysis/basic_examples/galaxy_catalog_analysis_tutorial10.ipynb
+++ b/docs/notebooks/galcat_analysis/basic_examples/galaxy_catalog_analysis_tutorial10.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:288becf2b9ceb328728b210e1718b2f0ed292e97b0ba67fcceca628b10d2c221"
+  "signature": "sha256:b47df0564c9b9b70ac50e85b349ce66b3be9e9fd79f354c021b3651d39c73018"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this example, we'll start from a mock galaxy catalog and show how to determine which galaxies are \"isolated\" according to a variety of criteria. "
+      "In this tutorial, we'll start from a mock galaxy catalog and show how to determine which galaxies are \"isolated\" according to a variety of criteria. "
      ]
     },
     {
