--- a/docs/notebooks/subhalo_modeling/subhalo_modeling_tutorial5.ipynb
+++ b/docs/notebooks/subhalo_modeling/subhalo_modeling_tutorial5.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This notebook is intended to accompany the corresponding page of the Halotools documentation on subhalo-based model building. Although the tutorial on `halotools.readthedocs.org` is in principle comprehensive and stand-alone, there is supplementary material covered here that may provide further clarification. By following along with this notebook you can experiment with variations on the models as you learn the basic syntax. This notebook is not stand-alone, and is intended to be read along with its companion tutorial in the documentation. \n"
+      "This notebook is intended to accompany the corresponding page of the Halotools documentation on subhalo-based model building. Although the tutorial on `halotools.readthedocs.io` is in principle comprehensive and stand-alone, there is supplementary material covered here that may provide further clarification. By following along with this notebook you can experiment with variations on the models as you learn the basic syntax. This notebook is not stand-alone, and is intended to be read along with its companion tutorial in the documentation. \n"
      ]
     },
     {
